// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`listview header empty 1`] = `
<div class="lv__header">
  <!---->
  <!---->
</div>
`;

exports[`listview header nav 1`] = `
<div class="lv__header">
  <!---->
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb lv__header-breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner">
      home
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span></div>
</div>
`;

exports[`listview header title & nav 1`] = `
<div class="lv__header">
  <h1 class="lv__header-title">headerTitle</h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb lv__header-breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner is-link">
      home
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator">/</span></span></div>
</div>
`;
